---------------------------------------------------------------------------
Version 3.10.2 (rgerhards), 2008-01-1?
- fixed a bug that caused a segfault on startup when no $WorkDir directive
  was specified in rsyslog.conf
---------------------------------------------------------------------------
Version 3.10.1 (rgerhards), 2008-01-10
- implemented the "disk" queue mode. However, it currently is of very
  limited use, because it does not support persistence over rsyslogd
  runs. So when rsyslogd is stopped, the queue is drained just as with
  the in-memory queue modes. Persistent queues will be a feature of
  the next release.
- performance-optimized string class, should bring an overall improvement
- fixed a memory leak in imudp -- thanks to varmojfekoj for the patch
- fixed a race condition that could lead to a rsyslogd hang when during
  HUP or termination
- done some doc updates
- added $WorkDirectory config directive
- added $MainMsgQueueFileName config directive
- added $MainMsgQueueMaxFileSize config directive
---------------------------------------------------------------------------
Version 3.10.0 (rgerhards), 2008-01-07
- implemented input module interface and initial input modules
- enhanced threading for input modules (each on its own thread now)
- ability to bind UDP listeners to specific local interfaces/ports and
  ability to run multiple of them concurrently
- added ability to specify listen IP address for UDP syslog server
- license changed to GPLv3
- mark messages are now provided by loadble module immark
- rklogd is no longer provided. Its functionality has now been taken over
  by imklog, a loadable input module. This offers a much better integration
  into rsyslogd and makes sure that the kernel logger process is brought
  up and down at the appropriate times
- enhanced $IncludeConfig directive to support wildcard characters
  (thanks to Michael Biebl)
- all inputs are now implemented as loadable plugins