@@ -60,6 +60,7 @@ development and quite unstable...). So you have been warned ;)</p>
 	-2 option</li>
 	<li>$klogSymbolsTwice (imklog) [on/<b>off</b>] -- former klogd -s option</li>
 	<li>$MainMsgQueueFileName &lt;name&gt;</li>
+	<li>$MainMsgQueueImmediateShutdown [on/<b>off</b>]</li>
 	<li><a href="rsconf1_mainmsgqueuesize.html">$MainMsgQueueSize</a></li>
 	<li>$MainMsgQueueMaxFileSize &lt;size_nbr&gt;, default 1m</li>
 	<li>$MainMsgQueueType [<b>FixedArray</b>/LinkedList/Direct/Disk]</li>
