@@ -2,6 +2,7 @@
 Version 3.10.2 (rgerhards), 2008-01-1?
 - fixed a bug that caused a segfault on startup when no $WorkDir directive
   was specified in rsyslog.conf
+- added $MainMsgQueueImmediateShutdown config directive
 ---------------------------------------------------------------------------
 Version 3.10.1 (rgerhards), 2008-01-10
 - implemented the "disk" queue mode. However, it currently is of very
